Ajuste no endpoint de foto